#fix Bigger basket value on mobile devices

--- a/app/main.css
+++ b/app/main.css
@@ -4996,6 +4996,12 @@ page-404__title::after {
         width: 16px;
     }
 
+    .basket__value {
+      font-size: 16px;
+      line-height: 1;
+      margin-top: 1px;
+    }
+
     .display-menu {
         display: block;
     }
